<resources>
    <string name="app_name">SpotFree</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="show_only_unoccupied">Show Only Unoccupied</string>
    <string name="filter">Filter</string>
    <string name="radius_kilometers">Radius (km)</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="parking_zone">Parking Zone :</string>
    <string name="last_updated">Last Updated :</string>
</resources>