<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.ishara11rathnayake.spotfree.ui.home.MapViewFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.ishara11rathnayake.spotfree.ui.dashboard.ListViewFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ishara11rathnayake.spotfree.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>